--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,22 @@
 {
-    "name": "thanhryot/design_patterns",
+    "name": "thanhryot/design-patterns",
+    "type": "project",
     "authors": [
         {
-            "name": "Nguyen Duc Thanh",
+            "name": "Thanh Ryot",
             "email": "ducthanh186nd@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "ThanhRyot\\DesignPatterns\\" : "src/",
+            "Tests\\" : "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
+    }
 }
