--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "thanhryot/design-patterns",
+    "name": "thanhryot/php-design-patterns",
     "type": "project",
     "authors": [
         {
             "name": "Thanh Ryot",
-            "email": "ducthanh186nd@gmail.com"
+            "email": "thanhryot@gmail.com"
         }
     ],
     "require": {
@@ -12,11 +12,13 @@
     },
     "autoload": {
         "psr-4": {
-            "ThanhRyot\\DesignPatterns\\" : "src/",
-            "Tests\\" : "tests/"
+            "ThanhRyot\\DesignPatterns\\" : "src/"
         }
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
+    },
+    "autoload-dev": {
+        "Tests\\" : "tests/"
     }
 }
